# personal-website

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  repomix.config.json
src/: commands.rs  lib.rs
tests/: web.rs
www/: .gitignore  Dockerfile  fly.toml  index.html  package.json  vite.config.ts
www/.docker/: nginx.conf
www/.github/workflows/: fly-deploy.yml
www/public/cv/: index.html
www/public/lab/: index.html
www/public/lab/base64url/: index.html
www/public/lab/circular-buffers/: index.html
www/public/lab/compile-time-execution/: index.html
www/public/lab/dod/: index.html
www/public/lab/fsm/: index.html
www/public/lab/game-engine/: index.html
www/public/lab/game-engine-toolkit/: index.html
www/public/lab/game-loop/: index.html
www/public/lab/jai-metaprogramming/: index.html
www/public/lab/memory-allocators/: index.html
www/public/lab/observer/: index.html
www/public/lab/oop/: index.html
www/public/lab/simd-in-go/: index.html
www/public/lab/simd-presentation-results/: index.html
www/src/components/: History.svelte  Input.svelte
www/src/routes/: +page.svelte
www/src/utils/: commands.ts
