[package]
name = "peter-paravinja-personal-website"
description = "Personal website. Tech combination of Rust WASM + Svetle for the frontend. Imitating terminal as a UI."
version = "1.0.3"
authors = ["oriiyx <paravinja92@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = ["Window", "Location", "console", "Response", "Request", "RequestInit", "RequestMode", "Headers"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
cfg-if = "1.0.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
